test/samples/error/err_incorrect_num_args.w
func foo(x:float,y:int, c:boolean):int { }
foo(1.0, 1)