test/samples/error/err_incorrect_num_args.output
error: line 2:0 incorrect number of args (3 args expected but 2 was given)